<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">make possible</string>
    <string name="dummy_button">send Button</string>
    <string name="dummy_content">输入内容,点击发送</string>
	
    <string name="send">发送</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    
    <string name="country_normal_code">+86</string>
    <string name="country_normal_name">中国</string>
    <string name="regbymoile_reg_addr_hint">输入电话号码</string>
    <string name="select_login_by_facebook">Facebook Connect</string>
    <string name="app_nextstep">Next</string>
    <string name="license_agree">Read and agreed:</string>
    <string name="license_detail">Terms and Privacy</string>
    
    <string name="picDesc" >图片描述：</string>
    
    <string name="netstate" >网络状态</string>
    <string name="setnetwork" >当前网络不可用，请设置网络!</string>
    <string name="setup" >设置</string>
    <string name="cancel" >取消</string>
    
</resources>
